--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,12 @@ div.card img.product-image{
     height: 200px;
     object-fit: contain;
 }
+img.product-icon-image{
+
+    height: 50px;
+    object-fit: contain;
+
+}
 h1{
     color: red;
 }
